apps/web/immich/deployment-immich-machine-learning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich

    spec:
      containers:
      - name: immich
        image: ghcr.io/immich-app/immich-server:v1.109.2
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "8000m"
        ports:
        - containerPort: 2283
        volumeMounts:
        # - name: config
        #   mountPath: /data
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
      volumes:
      # - name: config
      #   hostPath:
      #     path: /lxc-configs/immich-config # This path contains the same files on all nodes 
      #     type: DirectoryOrCreate
      - name: localtime
        hostPath:
          path: /etc/localtime
