apps/web/immich/deployment-immich-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres

    spec:
      containers:
      - name: immich-postgres
        image: docker.io/tensorchord/pgvecto-rs:pg14-v0.2.0@sha256:90724186f0a3517cf6914295b5ab410db9ce23190a2d9d0b9dd6463e3fa298f0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "4Gi"
            cpu: "8000m"
        ports:
        - containerPort: 2283
        volumeMounts:
        - name: immich-postgres-data
          mountPath: /var/lib/postgresql/data
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
      volumes:
      - name: immich-postgres-data
        hostPath:
          path: /lxc-configs/immich-postgres-data # This path contains the same files on all nodes 
          type: DirectoryOrCreate
      - name: localtime
        hostPath:
          path: /etc/localtime
