apps/web/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
spec:
  selector:
    app: immich
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
